tests/Jroc.Test262.Tests/built-ins/NativeErrors/JavaScript/TypeError/instance-proto.js
assert.sameValue(Object.getPrototypeOf(new TypeError), TypeError.prototype);

